Add command flag